# liosam_liauto

./: CMakeLists.txt  README.md
LIO-SAM-DetailedNote-main/: package.xml
LIO-SAM-DetailedNote-main/config/: params.yaml
LIO-SAM-DetailedNote-main/config/ori config/: params.yaml
LIO-SAM-DetailedNote-main/launch/: tcp.launch  usbcan.launch
LIO-SAM-DetailedNote-main/launch/include/: module_liauto_necessary.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz_scenePedestrain.launch  module_scenePedestrain.launch
LIO-SAM-DetailedNote-main/launch/include/config/: robot.urdf.xacro  robot.urdf_liauto.xacro  rviz.rviz  rvizConfig.rviz
LIO-SAM-DetailedNote-main/src/: drive without serialport.cppbackup  drive.cpp  imageProjection.cpp  imuPreintegration.cpp  liauto copy用的整体的地图做匹配，速度慢  liauto 整体地图重定位，精度不行  liauto 用全局地图提取局部地图作匹配，平均100ms  liautocpp能高精度重定位icp参数0.2 1e-6 1e-6  main.c  main.h  scenePedestrain.cpp  std_message.cpp  temp.cpp  timer.c  timer.h  ttlControl.cpp
config/: params.yaml
config/ori config/: params copy.yaml
include/: std_message.h  utility.h
launch/: liauto.launch  paperData.launch  run.launch  scenePedestrain.launch  singlight.launch  ttlControl.launch
launch/include/: module_liauto_necessary.launch  module_rviz_liauto.launch
launch/include/config/: gps.rviz  imu.rviz  lslidar.rviz  rvizScenePedestrain.rviz
src/: liauto 局部地图拼接，平均80-90ms  liauto-GPS重定位  liauto.cpp  mapOptmization.cpp  paperData.cpp  tcp.cpp  test.cpp  usbcan.cpp
